Deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-backend
  namespace: wcare-ns
  labels:
    app: wcare-application
    subname: library-app-backend
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 8083
      targetPort: my-http
  selector:
    app: wcare-application
    subname: library-app-backend
