Deployment/yaml/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: library-app-backend
  namespace: wcare-ns
  labels:
    app: wcare-application
    subname: library-app-backend
spec:
  path: /
  to:
    kind: Service
    name: library-app-backend
    weight: 100
  port:
    targetPort: my-http
